fix minor layout bug

--- a/src/user-module/Home/Home.component.css
+++ b/src/user-module/Home/Home.component.css
@@ -2,5 +2,5 @@ p {
     margin-bottom: 16px;
 }
 div {
-    margin-top: 104px;
+    margin-top: 10vh;
 }
