--- a/src/user-module/Info/Info.component.css
+++ b/src/user-module/Info/Info.component.css
@@ -6,7 +6,7 @@ a {
     color: inherit;
 }
 div {
-    margin-top: 470px;
+    margin-top: 40vh;
     display: flex;
     flex-direction: column;
     align-items: end;
