--- a/src/user-module/Projects/Projects.component.css
+++ b/src/user-module/Projects/Projects.component.css
@@ -8,7 +8,7 @@ a {
     color: inherit;
 }
 div {
-    margin-top: 640px;
+    margin-top: 55vh;
     display: flex;
     flex-direction: column;
     align-items: end;
